// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardSection renders correctly 1`] = `
<div
  data-testid="lyzer-card-section"
>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-6 flex-grid-col-lg-4 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Is it race weekend?
      </span>
      <h3
        class="lyzer-card-body"
      >
        Yes
      </h3>
      <progress
        class="lyzer-progress lyzer-progress-complete"
        max="100"
        value="100"
      />
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-6 flex-grid-col-lg-4 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Race weekend progress
      </span>
      <h3
        class="lyzer-card-body"
      >
        Ongoing session: Race
        <p
          class="text-sm m-0"
        >
          Sat, Feb 22, 2025, 12:00 PM
        </p>
      </h3>
      <progress
        class="lyzer-progress lyzer-progress-complete"
        max="100"
        value="100"
      />
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-6 flex-grid-col-lg-4 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Driver leader
      </span>
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-6 flex-grid-col-lg-4 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Constructor leader
      </span>
    </div>
  </div>
</div>
`;

exports[`CardSection renders loading state correctly 1`] = `
<div
  data-testid="lyzer-card-section"
>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-6 flex-grid-col-lg-4 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Is it race weekend?
      </span>
      <h3
        class="lyzer-card-body"
      >
        No
      </h3>
      <progress
        class="lyzer-progress lyzer-progress-incomplete"
        max="100"
        value="0"
      />
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-6 flex-grid-col-lg-4 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Race weekend progress
      </span>
      <h3
        class="lyzer-card-body"
      >
        Next session: Loading...
      </h3>
      <progress
        class="lyzer-progress lyzer-progress-incomplete"
        max="100"
        value="0"
      />
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-6 flex-grid-col-lg-4 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Driver leader
      </span>
    </div>
  </div>
  <div
    class="flex-grid-item flex-grid-col-xs-12 flex-grid-col-sm-12 flex-grid-col-md-6 flex-grid-col-lg-4 flex-grid-col-xl-3 flex-grid-col-xxl-3"
  >
    <div
      class="lyzer-card"
    >
      <span
        class="lyzer-card-heading"
      >
        Constructor leader
      </span>
    </div>
  </div>
</div>
`;
